--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -13,7 +13,7 @@ const launches = await getLatestLaunches()
                     details={launch.details}
                     flightNumber={launch.flight_number}
                     success={launch.success}
-                    
+                    nameLaunch={launch.name}
                 >
                 </CardLaunch>
             )
