--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,15 +13,15 @@ import HeaderButton from "./HeaderButton.astro";
         </p>
 
         <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row">
-            <HeaderButton class="text-white" href="/">
+            <HeaderButton endpoint="/" >
                 <svg width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M4 13a8 8 0 0 1 7 7a6 6 0 0 0 3 -5a9 9 0 0 0 6 -8a3 3 0 0 0 -3 -3a9 9 0 0 0 -8 6a6 6 0 0 0 -5 3" />
                 <path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3" />
                 <path d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
                 </svg>
-                Últimos lanzamientos</HeaderButton>
-            <HeaderButton class="text-white" href="/about">
+                Primeros lanzamientos</HeaderButton>
+            <HeaderButton endpoint="/about" >
                 <svg width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" />
@@ -29,7 +29,7 @@ import HeaderButton from "./HeaderButton.astro";
                 <path d="M11 12h1v4h1" />
                 </svg>
                 Sobre el proyecto</HeaderButton>
-            <HeaderButton class="text-white" href="/oldest">
+            <HeaderButton endpoint="/">
                 <svg width="44" height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                 <path d="M20.984 12.535a9 9 0 1 0 -8.431 8.448" />
