--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,11 +4,18 @@ import Layout from "../layouts/Layout.astro"
 
 <Layout title="About the project">
 
-    <h1>
-        About the project
+    <h1 class="text-center mb-4 text-3xl tracking-tight font-bold">
+        Sobre el proyecto
     </h1>
     
-    <p>
-        The SpaceX Launches projects is a demo for the Austro course with Midudev.
-    </p>
+    <article class="">
+        <p class="mb-6">
+            Space Exploration Technologies Corp., conocida como SpaceX, es una empresa estadounidense de fabricación aeroespacial y de servicios de transporte espacial con sede en Hawthorne (California). Fue fundada en 2002 por Elon Musk con el objetivo de reducir los costes de viajar al espacio para facilitar la colonización de Marte. SpaceX ha desarrollado varios vehículos de lanzamiento, la constelación Starlink, la nave de carga Dragon y llevado astronautas a la Estación Espacial Internacional en la Dragon 2.
+        </p>
+
+        <p class="mb-6">
+            Los logros de SpaceX incluyen el primer cohete de combustible líquido financiado de forma privada en alcanzar la órbita (Falcon 1 en 2008), la primera empresa privada en lanzar a órbita y recuperar una nave (Dragon en 2010), la primera empresa privada en enviar una nave a la Estación Espacial Internacional (Dragon en 2012), el primer aterrizaje propulsado de un cohete orbital (Falcon 9 en 2015), la primera reutilización de un cohete orbital (Falcon 9 en 2017), la primera empresa privada en lanzar una carga en órbita heliocéntrica (Falcon Heavy con el Tesla Roadster de Elon Musk en 2018), y la primera compañía en enviar astronautas a la Estación Espacial Internacional (Dragon 2 en 2020). SpaceX ha realizado 20 misiones de reabastecimiento a la EEI bajo una serie de contratos de la NASA, así como una demostración de la Dragon 2 el 2 de marzo de 2019, su primera cápsula certificada para llevar humanos, y el primer vuelo con tripulación de la Dragon 2 el 30 de mayo de 2020. En enero de 2020, con el tercer lanzamiento de Starlink, se convirtió en el operador con la mayor constelación de satélites del mundo.
+        </p>
+        <a class="text-sky-400" href="https://es.wikipedia.org/wiki/SpaceX"  target="_blank">Wikipedia</a>
+    </article>
 </Layout>
